--- a/00001_Temperature_Humidity/PlatformIO/Temp_Humidity/platformio.ini
+++ b/00001_Temperature_Humidity/PlatformIO/Temp_Humidity/platformio.ini
@@ -13,4 +13,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-
+lib_deps = 
+	adafruit/Adafruit Unified Sensor@^1.1.9
+	adafruit/DHT sensor library@^1.4.4
