Firebase getting started demo
Created the Firebase database from:

ESP32: Getting Started with Firebase (Realtime Database)
https://randomnerdtutorials.com/esp32-firebase-realtime-database/

--- a/00001_Temperature_Humidity/PlatformIO/Temp_Humidity/platformio.ini
+++ b/00001_Temperature_Humidity/PlatformIO/Temp_Humidity/platformio.ini
@@ -16,3 +16,4 @@ monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit Unified Sensor@^1.1.9
 	adafruit/DHT sensor library@^1.4.4
+	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^4.3.8
